--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
--e git+https://github.com/mindee/doctr.git#egg=python-doctr[torch]
+setuptools
+-e git+https://github.com/mindee/doctr.git#egg=python-doctr[torch,viz]
 sentence_transformers
 chromadb
 openai
