--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@ __pycache__/
 chroma_db/
 access_rights.json
 
+# Testing stuff
+playground
+MyCompany
+
 # Distribution / packaging
 .Python
 build/
