--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,315 @@
 setuptools
 -e git+https://github.com/mindee/doctr.git#egg=python-doctr[torch,viz]
-sentence_transformers
-chromadb
-openai
+
+absl-py==2.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
+airportsdata==20250224
+annotated-types==0.7.0
+anyio==4.9.0
+appdirs==1.4.4
+argcomplete==1.8.1
+asgiref==3.8.1
+astor==0.8.1
+astunparse==1.6.3
+async-timeout==5.0.1
+attrs==25.3.0
+Automat==20.2.0
+Babel==2.8.0
+backcall==0.2.0
+backoff==2.2.1
+bcrypt==4.3.0
+beautifulsoup4==4.10.0
+beniget==0.4.1
+blake3==1.0.5
+bleach==4.1.0
+blinker==1.4
+bottle==0.12.19
+Brotli==1.0.9
+build==1.2.2.post1
+cachetools==5.5.2
+certifi==2020.6.20
+cffi==1.15.0
+chardet==4.0.0
+charset-normalizer==3.4.2
+chromadb==1.0.9
+click==8.1.8
+cloud-init==24.4.1
+cloudpickle==3.1.1
+colorama==0.4.4
+coloredlogs==15.0.1
+command-not-found==0.3
+commonmark==0.9.1
+compressed-tensors==0.9.3
+configobj==5.0.6
+constantly==15.1.0
+cryptography==3.4.8
+ctop==1.0.0
+cupy-cuda12x==13.4.1
+cycler==0.11.0
+dbus-python==1.2.18
+decorator==4.4.2
+defusedxml==0.7.1
+Deprecated==1.2.18
+depyf==0.18.0
+dill==0.4.0
+diskcache==5.6.3
+distlib==0.3.4
+distro==1.7.0
+distro-info==1.1+ubuntu0.2
+dnspython==2.7.0
+docker==5.0.3
+docx==0.2.4
+dotenv==0.9.9
+durationpy==0.10
+einops==0.8.1
+email_validator==2.2.0
+entrypoints==0.4
+et_xmlfile==2.0.0
+exceptiongroup==1.3.0
+fastapi==0.115.9
+fastapi-cli==0.0.7
+fastrlock==0.8.3
+filelock==3.18.0
+flake8==4.0.1
+flatbuffers===1.12.1-git20200711.33e2d80-dfsg1-0.6
+fonttools==4.29.1
+frozenlist==1.6.0
+fs==2.4.12
+fsspec==2024.3.1
+future==0.18.2
+gast==0.5.2
+gguf==0.16.3
+Glances==3.2.4.2
+google-auth==2.40.1
+google-pasta==0.2.0
+googleapis-common-protos==1.70.0
+grpcio==1.71.0
+h11==0.16.0
+h5py==3.6.0
+h5py.-debian-h5py-serial==3.6.0
+html5lib==1.1
+httpcore==1.0.9
+httplib2==0.20.2
+httptools==0.6.4
+httpx==0.28.1
+huggingface-hub==0.31.4
+humanfriendly==10.0
+hyperlink==21.0.0
+icdiff==2.0.4
+idna==3.3
+importlib_metadata==8.0.0
+importlib_resources==6.5.2
+incremental==21.3.0
+influxdb==5.3.1
+interegular==0.3.3
+iotop==0.6
+ipykernel==6.7.0
+ipython==7.31.1
+ipython_genutils==0.2.0
+jax==0.5.1
+jax-cuda12-pjrt==0.5.1
+jax-cuda12-plugin==0.5.1
+jaxlib==0.5.1
+jedi==0.18.0
+jeepney==0.7.1
+Jinja2==3.1.6
+jiter==0.10.0
+joblib==0.17.0
+jsonpatch==1.32
+jsonpointer==2.0
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
+jupyter-client==7.1.2
+jupyter-core==4.9.1
+kaptan==0.5.12
+keras==3.6.0
+keyring==23.5.0
+kiwisolver==1.3.2
+kubernetes==32.0.1
+lark==1.2.2
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+libtmux==0.10.1
+livereload==2.6.3
+llguidance==0.7.20
+llvmlite==0.44.0
+lm-format-enforcer==0.10.11
+lxml==4.8.0
+lz4==3.1.3+dfsg
+Markdown==3.3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.0.1
+matplotlib==3.5.1
+matplotlib-inline==0.1.3
+mccabe==0.6.1
+mdurl==0.1.2
+mistral_common==1.5.4
+mkdocs==1.1.2
+ml-dtypes==0.5.0
+mmh3==5.1.0
+more-itertools==8.10.0
+mpmath==0.0.0
+msgpack==1.0.3
+msgspec==0.19.0
+multidict==6.4.4
+namex==0.0.8
+nest-asyncio==1.5.4
+netifaces==0.11.0
+networkx==2.4
+ninja==1.11.1.4
+numba==0.61.2
+numpy==2.2.6
+nvidia-ml-py==12.555.43
+oauthlib==3.2.2
+odfpy==1.4.1
+olefile==0.46
+onnxruntime==1.22.0
+openai==1.79.0
+opencv-python-headless==4.11.0.86
+openpyxl==3.1.5
+opentelemetry-api==1.26.0
+opentelemetry-exporter-otlp==1.26.0
+opentelemetry-exporter-otlp-proto-common==1.26.0
+opentelemetry-exporter-otlp-proto-grpc==1.26.0
+opentelemetry-exporter-otlp-proto-http==1.26.0
+opentelemetry-instrumentation==0.54b1
+opentelemetry-instrumentation-asgi==0.54b1
+opentelemetry-instrumentation-fastapi==0.54b1
+opentelemetry-proto==1.26.0
+opentelemetry-sdk==1.26.0
+opentelemetry-semantic-conventions==0.47b0
+opentelemetry-semantic-conventions-ai==0.4.9
+opentelemetry-util-http==0.54b1
+opt-einsum==3.3.0
+optree==0.13.1
+orjson==3.10.18
+outlines==0.1.11
+outlines_core==0.1.26
+overrides==7.7.0
+packaging==21.3
+pandas==1.3.5
+parso==0.8.1
+partial-json-parser==0.2.1.1.post5
+pexpect==4.8.0
+pickleshare==0.7.5
+pillow==11.2.1
+pipx==1.0.0
+platformdirs==2.5.1
+ply==3.11
+posthog==4.0.1
+prometheus-fastapi-instrumentator==7.1.0
+prometheus_client==0.22.0
+prompt-toolkit==3.0.28
+propcache==0.3.1
+protobuf==4.25.7
+psutil==5.9.0
+ptyprocess==0.7.0
+py==1.10.0
+py-cpuinfo==9.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.1
+pycodestyle==2.8.0
+pycountry==24.6.1
+pycparser==2.21
+pycryptodomex==3.11.0
+pydantic==2.11.4
+pydantic_core==2.33.2
+pyflakes==2.4.0
+Pygments==2.19.1
+PyGObject==3.42.1
+PyHamcrest==2.0.2
+pyinotify==0.9.6
+PyJWT==2.3.0
+pymongo==4.13.0
+PyMuPDF==1.25.5
+pyOpenSSL==21.0.0
+pyparsing==2.4.7
+PyPika==0.48.9
+pyproject_hooks==1.2.0
+pyrsistent==0.18.1
+pyserial==3.5
+pysmi==0.3.2
+pysnmp==4.4.12
+pystache==0.6.0
+python-apt==2.4.0+ubuntu4
+python-dateutil==2.8.1
+python-dotenv==1.1.0
+python-json-logger==3.3.0
+python-magic==0.4.24
+python-multipart==0.0.20
+pythran==0.10.0
+pytz==2022.1
+PyYAML==6.0.2
+pyzmq==26.4.0
+ray==2.46.0
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
+requests-oauthlib==2.0.0
+rich==14.0.0
+rich-toolkit==0.14.6
+rpds-py==0.25.0
+rsa==4.9.1
+safetensors==0.5.3
+scikit-learn==0.23.2
+scipy==1.8.0
+SecretStorage==3.3.1
+sentence-transformers==4.1.0
+sentencepiece==0.2.0
+service-identity==18.1.0
+shellingham==1.5.4
+six==1.16.0
+sniffio==1.3.1
+sos==4.7.2
+soupsieve==2.3.1
+ssh-import-id==5.11
+starlette==0.45.3
+striprtf==0.0.29
+sympy==1.12
+tenacity==9.1.2
+tensorboard==2.18.0
+tensorflow==2.18.0
+termcolor==1.1.0
+threadpoolctl==3.1.0
+tiktoken==0.9.0
+tmuxp==1.9.2
+tokenizers==0.21.1
+tomli==2.2.1
+torch==2.6.0
+torchaudio==2.6.0
+torchvision==0.21.0
+tornado==6.1
+tqdm==4.67.1
+traitlets==5.1.1
+transformers==4.51.3
+triton==3.2.0
+Twisted==22.1.0
+typer==0.15.4
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+ufoLib2==0.13.1
+ufw==0.36.1
+unattended-upgrades==0.1
+unicodedata2==14.0.0
+urllib3==1.26.5
+userpath==1.8.0
+uvicorn==0.34.2
+uvloop==0.21.0
+virtualenv==20.13.0+ds
+vllm==0.8.5.post1
+wadllib==1.3.6
+watchfiles==1.0.5
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.2.3
+websockets==15.0.1
+Werkzeug==2.0.2
+wrapt==1.13.3
+xformers==0.0.29.post2
+xgrammar==0.1.18
+yarl==1.20.0
+zipp==3.21.0
+zope.interface==5.4.0
