--- a/requirements.txt
+++ b/requirements.txt
@@ -1,315 +1,277 @@
-setuptools
+setuptools==75.8.0
 -e git+https://github.com/mindee/doctr.git#egg=python-doctr[torch,viz]
 
-absl-py==2.1.0
+acres==0.3.0
+aiofiles==24.1.0
 aiohappyeyeballs==2.6.1
-aiohttp==3.11.18
+aiohttp==3.11.16
 aiosignal==1.3.2
 airportsdata==20250224
-annotated-types==0.7.0
+altair==5.5.0
+anaconda-anon-usage @ file:///croot/anaconda-anon-usage_1732732445543/work
+annotated-types @ file:///croot/annotated-types_1709542908624/work
+anyascii==0.3.2
 anyio==4.9.0
-appdirs==1.4.4
-argcomplete==1.8.1
+archspec @ file:///croot/archspec_1709217642129/work
 asgiref==3.8.1
 astor==0.8.1
-astunparse==1.6.3
-async-timeout==5.0.1
 attrs==25.3.0
-Automat==20.2.0
-Babel==2.8.0
-backcall==0.2.0
 backoff==2.2.1
 bcrypt==4.3.0
-beautifulsoup4==4.10.0
-beniget==0.4.1
-blake3==1.0.5
-bleach==4.1.0
-blinker==1.4
-bottle==0.12.19
-Brotli==1.0.9
+blake3==1.0.4
+blinker==1.9.0
+boltons @ file:///croot/boltons_1737061692168/work
+Brotli @ file:///croot/brotli-split_1736182456865/work
 build==1.2.2.post1
 cachetools==5.5.2
-certifi==2020.6.20
-cffi==1.15.0
-chardet==4.0.0
-charset-normalizer==3.4.2
-chromadb==1.0.9
+certifi @ file:///croot/certifi_1738623731865/work/certifi
+cffi @ file:///croot/cffi_1736182485317/work
+charset-normalizer @ file:///croot/charset-normalizer_1721748349566/work
+chroma-hnswlib==0.7.6
+chromadb==1.0.3
+ci-info==0.3.0
 click==8.1.8
-cloud-init==24.4.1
 cloudpickle==3.1.1
-colorama==0.4.4
 coloredlogs==15.0.1
-command-not-found==0.3
-commonmark==0.9.1
-compressed-tensors==0.9.3
-configobj==5.0.6
-constantly==15.1.0
-cryptography==3.4.8
-ctop==1.0.0
+compressed-tensors==0.9.2
+conda @ file:///croot/conda_1738168370816/work
+conda-anaconda-telemetry @ file:///croot/conda-anaconda-telemetry_1736524596117/work
+conda-anaconda-tos @ file:///croot/conda-anaconda-tos_1739298990519/work
+conda-content-trust @ file:///croot/conda-content-trust_1714483159009/work
+conda-libmamba-solver @ file:///croot/conda-libmamba-solver_1737733694612/work/src
+conda-package-handling @ file:///croot/conda-package-handling_1731369017509/work
+conda_package_streaming @ file:///croot/conda-package-streaming_1731366181659/work
+configobj==5.0.9
+configparser==7.2.0
+contourpy==1.3.1
+cryptography @ file:///croot/cryptography_1732129644106/work
 cupy-cuda12x==13.4.1
-cycler==0.11.0
-dbus-python==1.2.18
-decorator==4.4.2
+cycler==0.12.1
 defusedxml==0.7.1
 Deprecated==1.2.18
 depyf==0.18.0
-dill==0.4.0
+dill==0.3.9
 diskcache==5.6.3
-distlib==0.3.4
-distro==1.7.0
-distro-info==1.1+ubuntu0.2
+distro @ file:///croot/distro_1714488253808/work
 dnspython==2.7.0
-docker==5.0.3
 docx==0.2.4
-dotenv==0.9.9
-durationpy==0.10
+durationpy==0.9
+ecdsa==0.19.1
 einops==0.8.1
 email_validator==2.2.0
-entrypoints==0.4
 et_xmlfile==2.0.0
-exceptiongroup==1.3.0
+etelemetry==0.3.1
 fastapi==0.115.9
 fastapi-cli==0.0.7
 fastrlock==0.8.3
 filelock==3.18.0
-flake8==4.0.1
-flatbuffers===1.12.1-git20200711.33e2d80-dfsg1-0.6
-fonttools==4.29.1
-frozenlist==1.6.0
-fs==2.4.12
-fsspec==2024.3.1
-future==0.18.2
-gast==0.5.2
-gguf==0.16.3
-Glances==3.2.4.2
-google-auth==2.40.1
-google-pasta==0.2.0
-googleapis-common-protos==1.70.0
+fitz==0.0.1.dev2
+flatbuffers==25.2.10
+fonttools==4.57.0
+frontend==0.0.3
+frozendict @ file:///croot/frozendict_1713194832637/work
+frozenlist==1.5.0
+fsspec==2025.3.2
+gguf==0.10.0
+gitdb==4.0.12
+GitPython==3.1.44
+google-auth==2.38.0
+googleapis-common-protos==1.69.2
 grpcio==1.71.0
-h11==0.16.0
-h5py==3.6.0
-h5py.-debian-h5py-serial==3.6.0
-html5lib==1.1
-httpcore==1.0.9
-httplib2==0.20.2
+h11==0.14.0
+h5py==3.13.0
+hf-xet==1.0.2
+httpcore==1.0.7
+httplib2==0.22.0
 httptools==0.6.4
 httpx==0.28.1
-huggingface-hub==0.31.4
+huggingface-hub==0.30.2
 humanfriendly==10.0
-hyperlink==21.0.0
-icdiff==2.0.4
-idna==3.3
-importlib_metadata==8.0.0
+idna @ file:///croot/idna_1714398848350/work
+importlib_metadata==8.6.1
 importlib_resources==6.5.2
-incremental==21.3.0
-influxdb==5.3.1
 interegular==0.3.3
-iotop==0.6
-ipykernel==6.7.0
-ipython==7.31.1
-ipython_genutils==0.2.0
-jax==0.5.1
-jax-cuda12-pjrt==0.5.1
-jax-cuda12-plugin==0.5.1
-jaxlib==0.5.1
-jedi==0.18.0
-jeepney==0.7.1
+isodate==0.6.1
+itsdangerous==2.2.0
 Jinja2==3.1.6
-jiter==0.10.0
-joblib==0.17.0
-jsonpatch==1.32
-jsonpointer==2.0
+jiter==0.9.0
+joblib==1.4.2
+jsonpatch @ file:///croot/jsonpatch_1714483231291/work
+jsonpointer==2.1
 jsonschema==4.23.0
-jsonschema-specifications==2025.4.1
-jupyter-client==7.1.2
-jupyter-core==4.9.1
-kaptan==0.5.12
-keras==3.6.0
-keyring==23.5.0
-kiwisolver==1.3.2
+jsonschema-specifications==2024.10.1
+kiwisolver==1.4.8
 kubernetes==32.0.1
+langdetect==1.0.9
 lark==1.2.2
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-libtmux==0.10.1
-livereload==2.6.3
-llguidance==0.7.20
+libmambapy @ file:///croot/mamba-split_1734469461757/work/libmambapy
+llguidance==0.7.13
 llvmlite==0.44.0
 lm-format-enforcer==0.10.11
-lxml==4.8.0
-lz4==3.1.3+dfsg
-Markdown==3.3.6
-markdown-it-py==3.0.0
-MarkupSafe==2.0.1
-matplotlib==3.5.1
-matplotlib-inline==0.1.3
-mccabe==0.6.1
-mdurl==0.1.2
+looseversion==1.3.0
+lxml==5.3.2
+markdown-it-py @ file:///work/perseverance-python-buildout/croot/markdown-it-py_1698846045803/work
+MarkupSafe==3.0.2
+matplotlib==3.10.1
+mdurl @ file:///work/perseverance-python-buildout/croot/mdurl_1698845653285/work
+menuinst @ file:///croot/menuinst_1738943416351/work
 mistral_common==1.5.4
-mkdocs==1.1.2
-ml-dtypes==0.5.0
 mmh3==5.1.0
-more-itertools==8.10.0
-mpmath==0.0.0
-msgpack==1.0.3
+monotonic==1.6
+mplcursors==0.6
+mpmath==1.3.0
+msgpack==1.1.0
 msgspec==0.19.0
-multidict==6.4.4
-namex==0.0.8
-nest-asyncio==1.5.4
-netifaces==0.11.0
-networkx==2.4
+multidict==6.2.0
+Naked==0.1.32
+nanobind==2.6.1
+narwhals==1.35.0
+nest-asyncio==1.6.0
+networkx==3.4.2
+nibabel==5.3.2
 ninja==1.11.1.4
-numba==0.61.2
-numpy==2.2.6
-nvidia-ml-py==12.555.43
+nipype==1.10.0
+numba==0.61.0
+numpy==2.1.3
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
 oauthlib==3.2.2
+odf==0.0.1
 odfpy==1.4.1
-olefile==0.46
-onnxruntime==1.22.0
+ollama==0.4.7
+onnx==1.17.0
+onnxruntime==1.21.0
 openai==1.79.0
+opencv-python==4.11.0.86
 opencv-python-headless==4.11.0.86
 openpyxl==3.1.5
-opentelemetry-api==1.26.0
-opentelemetry-exporter-otlp==1.26.0
-opentelemetry-exporter-otlp-proto-common==1.26.0
-opentelemetry-exporter-otlp-proto-grpc==1.26.0
-opentelemetry-exporter-otlp-proto-http==1.26.0
-opentelemetry-instrumentation==0.54b1
-opentelemetry-instrumentation-asgi==0.54b1
-opentelemetry-instrumentation-fastapi==0.54b1
-opentelemetry-proto==1.26.0
-opentelemetry-sdk==1.26.0
-opentelemetry-semantic-conventions==0.47b0
-opentelemetry-semantic-conventions-ai==0.4.9
-opentelemetry-util-http==0.54b1
-opt-einsum==3.3.0
-optree==0.13.1
-orjson==3.10.18
+opentelemetry-api==1.31.1
+opentelemetry-exporter-otlp-proto-common==1.31.1
+opentelemetry-exporter-otlp-proto-grpc==1.31.1
+opentelemetry-instrumentation==0.52b1
+opentelemetry-instrumentation-asgi==0.52b1
+opentelemetry-instrumentation-fastapi==0.52b1
+opentelemetry-proto==1.31.1
+opentelemetry-sdk==1.31.1
+opentelemetry-semantic-conventions==0.52b1
+opentelemetry-util-http==0.52b1
+orjson==3.10.16
 outlines==0.1.11
 outlines_core==0.1.26
 overrides==7.7.0
-packaging==21.3
-pandas==1.3.5
-parso==0.8.1
+packaging @ file:///croot/packaging_1734472117206/work
 partial-json-parser==0.2.1.1.post5
-pexpect==4.8.0
-pickleshare==0.7.5
-pillow==11.2.1
-pipx==1.0.0
-platformdirs==2.5.1
-ply==3.11
-posthog==4.0.1
+pathlib==1.0.1
+pillow==11.1.0
+platformdirs @ file:///work/perseverance-python-buildout/croot/platformdirs_1701732573265/work
+pluggy @ file:///croot/pluggy_1733169602837/work
+posthog==3.23.0
 prometheus-fastapi-instrumentator==7.1.0
-prometheus_client==0.22.0
-prompt-toolkit==3.0.28
+prometheus_client==0.21.1
 propcache==0.3.1
-protobuf==4.25.7
-psutil==5.9.0
-ptyprocess==0.7.0
-py==1.10.0
+protobuf==5.29.4
+prov==2.0.1
+psutil==7.0.0
+puremagic==1.28
 py-cpuinfo==9.0.0
+pyarrow==19.0.1
 pyasn1==0.4.8
-pyasn1-modules==0.2.1
-pycodestyle==2.8.0
+pyasn1_modules==0.4.2
+pyclipper==1.3.0.post6
+pycosat @ file:///croot/pycosat_1736868416091/work
 pycountry==24.6.1
-pycparser==2.21
-pycryptodomex==3.11.0
-pydantic==2.11.4
-pydantic_core==2.33.2
-pyflakes==2.4.0
-Pygments==2.19.1
-PyGObject==3.42.1
-PyHamcrest==2.0.2
-pyinotify==0.9.6
-PyJWT==2.3.0
-pymongo==4.13.0
+pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
+pydantic @ file:///croot/pydantic_1734736067156/work
+pydantic_core @ file:///croot/pydantic-core_1734726052986/work
+pydeck==0.9.1
+pydot==3.0.4
+Pygments @ file:///work/perseverance-python-buildout/croot/pygments_1698846270603/work
+pymongo==4.12.1
 PyMuPDF==1.25.5
-pyOpenSSL==21.0.0
-pyparsing==2.4.7
+pyparsing==3.2.3
+pypdfium2==4.30.1
 PyPika==0.48.9
 pyproject_hooks==1.2.0
-pyrsistent==0.18.1
-pyserial==3.5
-pysmi==0.3.2
-pysnmp==4.4.12
-pystache==0.6.0
-python-apt==2.4.0+ubuntu4
-python-dateutil==2.8.1
+PySocks @ file:///work/perseverance-python-buildout/croot/pysocks_1698845478203/work
+python-dateutil==2.9.0.post0
+python-docx==1.1.2
 python-dotenv==1.1.0
+python-jose==3.4.0
 python-json-logger==3.3.0
-python-magic==0.4.24
 python-multipart==0.0.20
-pythran==0.10.0
-pytz==2022.1
+pytz==2025.2
+pyxnat==1.6.3
 PyYAML==6.0.2
 pyzmq==26.4.0
-ray==2.46.0
+RapidFuzz==3.13.0
+ray==2.43.0
+rdflib==6.3.2
 referencing==0.36.2
 regex==2024.11.6
-requests==2.32.3
+requests @ file:///croot/requests_1730999120400/work
 requests-oauthlib==2.0.0
-rich==14.0.0
-rich-toolkit==0.14.6
-rpds-py==0.25.0
-rsa==4.9.1
+rich @ file:///croot/rich_1732638981168/work
+rich-toolkit==0.14.1
+rpds-py==0.24.0
+rsa==4.9
+ruamel.yaml @ file:///croot/ruamel.yaml_1727980156079/work
+ruamel.yaml.clib @ file:///croot/ruamel.yaml.clib_1727769819935/work
 safetensors==0.5.3
-scikit-learn==0.23.2
-scipy==1.8.0
-SecretStorage==3.3.1
-sentence-transformers==4.1.0
+scikit-learn==1.6.1
+scipy==1.15.2
+sentence-transformers==4.0.2
 sentencepiece==0.2.0
-service-identity==18.1.0
+shapely==2.1.0
+shellescape==3.8.1
 shellingham==1.5.4
-six==1.16.0
+simplejson==3.20.1
+six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
-sos==4.7.2
-soupsieve==2.3.1
-ssh-import-id==5.11
 starlette==0.45.3
 striprtf==0.0.29
-sympy==1.12
+sympy==1.13.1
 tenacity==9.1.2
-tensorboard==2.18.0
-tensorflow==2.18.0
-termcolor==1.1.0
-threadpoolctl==3.1.0
+text-generation==0.7.0
+threadpoolctl==3.6.0
 tiktoken==0.9.0
-tmuxp==1.9.2
 tokenizers==0.21.1
-tomli==2.2.1
+toml==0.10.2
 torch==2.6.0
 torchaudio==2.6.0
 torchvision==0.21.0
-tornado==6.1
-tqdm==4.67.1
-traitlets==5.1.1
-transformers==4.51.3
+tornado==6.4.2
+tqdm @ file:///croot/tqdm_1738943501192/work
+traits==7.0.2
+transformers==4.51.1
 triton==3.2.0
-Twisted==22.1.0
-typer==0.15.4
-typing-inspection==0.4.0
-typing_extensions==4.13.2
-ufoLib2==0.13.1
-ufw==0.36.1
-unattended-upgrades==0.1
-unicodedata2==14.0.0
-urllib3==1.26.5
-userpath==1.8.0
-uvicorn==0.34.2
+truststore @ file:///croot/truststore_1736550121485/work
+typer==0.12.5
+typing_extensions @ file:///croot/typing_extensions_1734714854207/work
+tzdata==2025.2
+urllib3 @ file:///croot/urllib3_1737133630106/work
+uvicorn==0.34.0
 uvloop==0.21.0
-virtualenv==20.13.0+ds
-vllm==0.8.5.post1
-wadllib==1.3.6
+vllm==0.8.3
+watchdog==6.0.0
 watchfiles==1.0.5
-wcwidth==0.2.5
-webencodings==0.5.1
-websocket-client==1.2.3
+websocket-client==1.8.0
 websockets==15.0.1
-Werkzeug==2.0.2
-wrapt==1.13.3
+wheel==0.45.1
+wrapt==1.17.2
 xformers==0.0.29.post2
-xgrammar==0.1.18
-yarl==1.20.0
+xgrammar==0.1.17
+yarl==1.19.0
 zipp==3.21.0
-zope.interface==5.4.0
+zstandard @ file:///croot/zstandard_1731356346222/work
