--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ LLM_MONGO_USER = { name: "llm_read_only", password: 'Password&1234!' }
 
 ## LLM
 LLM_URL = 'http://0.0.0.0:6096'
-# LLM_MODEL = 'deepseek-ai/DeepSeek-R1-Distill-Qwen-7B'
-LLM_MODEL = "RedHatAI/DeepSeek-R1-Distill-Qwen-7B-quantized.w8a8"
+LLM_MODEL = 'deepseek-ai/DeepSeek-R1-Distill-Qwen-7B'
+# LLM_MODEL = "RedHatAI/DeepSeek-R1-Distill-Qwen-7B-quantized.w8a8"
 # LLM_MODEL = 'MasterControlAIML/DeepSeek-R1-Qwen2.5-1.5b-SFT-R1-JSON-Unstructured-To-Structured' 
 # LLM_MODEL = 'deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B'
