--- a/.env
+++ b/.env
@@ -26,6 +26,7 @@ LLM_MONGO_USER = { name: "llm_read_only", password: 'Password&1234!' }
 
 
 ## LLM
+LLM_USER_PW = '6F34IU8kzABn6ItXgtJ59bpk9iMvgM'
 LLM_MODEL = 'deepseek-ai/DeepSeek-R1-Distill-Qwen-32B'
 # LLM_MODEL = 'deepseek-ai/DeepSeek-R1-Distill-Qwen-7B'
 # LLM_MODEL = "RedHatAI/DeepSeek-R1-Distill-Qwen-7B-quantized.w8a8"
