--- a/install/requirements.txt
+++ b/install/requirements.txt
@@ -7,6 +7,8 @@ pyjwt
 cryptography
 jsonschema
 jsonschema-fill-default
+aiofiles
+aiorwlock
 pymongo
 chromadb
 sentence-transformers
@@ -16,4 +18,3 @@ python-docx
 openpyxl
 striprtf
 odfpy
-aiofiles
